--- a/css/style.scss
+++ b/css/style.scss
@@ -1151,7 +1151,6 @@ section#portfolio{
   }//end of .slides
 
   >.works{
-      position: relative;
       
       >h3{
         position: relative;
@@ -1188,7 +1187,7 @@ section#portfolio{
           position: relative;
           
           >li{
-            opacity: 0;
+            display: none;
             position: absolute;
             left: 0;
             top: 0;
@@ -1197,10 +1196,12 @@ section#portfolio{
             background-position: 200px -100px;
   
             &:nth-child(1){
-              opacity: 1;
+              display: block;
               background-image: url(./../images/portfolio/design01.png);
             }
-            &:nth-child(2){background-image: url(./../images/portfolio/design02.png);}
+            &:nth-child(2){
+              background-image: url(./../images/portfolio/design02.png);
+            }
             &:nth-child(3){
               background-image: url(./../images/portfolio/design03.png);
               background-position: 300px -10px;
@@ -1220,43 +1221,48 @@ section#portfolio{
                 background-position: 0px 150px;
               }
             }
-  
-            >a{
-              position: relative;
-              display: block;
-              width: 400px;
-  
-              >h4{
-                display: inline-block;
-                margin: 50px 0 0 50px;
-                font-size: $heading;
-                transition: ease-out 0.3s;
 
-                &:hover{
-                  color: $pri-color-3;
-                }
-              }//end of h4
+            >.tit{
+              
+              >a{
+                display: block;
+                position: relative;
+                width: 400px;
+    
+                >h4{
+                  display: inline-block;
+                  margin: 50px 0 0 50px;
+                  font-size: $heading;
+                  transition: ease-out 0.3s;
   
-              >.view{
-                display: inline-block;
-                position: absolute;
-                bottom: 7px;
+                  &:hover{
+                    color: $pri-color-3;
+                  }
+                }//end of h4
+    
+                >.view{
+                  display: inline-block;
+                  position: absolute;
+                  bottom: 7px;
+  
+                  height: 20px;
+                  margin-left: 8px;
+                  padding: 5px 10px;
+                  color: #fff;
+                  line-height: 20px;
+                  text-align: center;
+                  border-radius: 10px;
+                  background-color: $pri-color-3;
+                  transition: ease-out 0.3s;
+    
+                  &:hover{
+                    box-shadow: inset 60px 0 0 0 $point-color-1;
+                  }
+                }//end of .view
+              }//end of a
 
-                height: 20px;
-                margin-left: 8px;
-                padding: 5px 10px;
-                color: #fff;
-                line-height: 20px;
-                text-align: center;
-                border-radius: 10px;
-                background-color: $pri-color-3;
-                transition: ease-out 0.3s;
+            }//end of .tit
   
-                &:hover{
-                  box-shadow: inset 60px 0 0 0 $point-color-1;
-                }
-              }//end of .view
-            }//end of a
   
             >p{
               width: 100%;
