--- a/works/pofol04/css/style.scss
+++ b/works/pofol04/css/style.scss
@@ -940,8 +940,9 @@ $mobile : "screen and (max-width:640px)";
                         width: 100%;
                     }
 
-                    &:nth-child(2){opacity: 0;}
-                    &:nth-child(3){opacity: 0;}
+                    &:nth-child(1){display: block;}
+                    &:nth-child(2),
+                    &:nth-child(3){display: none;}
 
                     &:nth-child(1)>.frame{background-image: url(./../images/calendar-main01.png);}
                     &:nth-child(2)>.frame{background-image: url(./../images/calendar-main02.png);}
