--- a/works/pofol04/css/style.scss
+++ b/works/pofol04/css/style.scss
@@ -935,14 +935,13 @@ $mobile : "screen and (max-width:640px)";
                     top: 0;
 
                     width: 1200px;
+                    opacity: 0;
 
                     @media #{$mobile}{
                         width: 100%;
                     }
 
-                    &:nth-child(1){display: block;}
-                    &:nth-child(2),
-                    &:nth-child(3){display: none;}
+                    &:nth-child(1){opacity: 1;}
 
                     &:nth-child(1)>.frame{background-image: url(./../images/calendar-main01.png);}
                     &:nth-child(2)>.frame{background-image: url(./../images/calendar-main02.png);}
